Compiler/fasto/tests/div_neg1.err
Type error: In Divide: one of subexpression types is not Int: int and bool at line 2, column 20