Compiler/fasto/tests/div_neg1.fo
fun int main () = 
  let w = write(10 / true) in 0